--- a/src/index.html
+++ b/src/index.html
@@ -40,15 +40,13 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Login</a></li>
-        <li><a href="#">Register</a></li>
+        <li><a ui-sref="register">Register</a></li>
         <li><a href="#">Logout</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
     </header>
-    <main ui-view>
-
-    </main>
+    <main ui-view></main>
   </body>
 </html>
