--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Login</a></li>
+        <li><a ui-sref="login">Login</a></li>
         <li><a ui-sref="register">Register</a></li>
         <li><a href="#">Logout</a></li>
       </ul>
