--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="login">Login</a></li>
         <li><a ui-sref="register">Register</a></li>
-        <li><a href="#">Logout</a></li>
+        <li><a ng-click="main.logout()">Logout</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
