--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Events</a></li>
+        <li><a ui-sref="eventsIndex">Events</a></li>
         <li><a href="#">Profile</a></li>
       </ul>
       <form class="navbar-form navbar-left">
