--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Home</a></li>
             <li><a ui-sref="eventsIndex">Events</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a ui-sref="vm.user.id(CurrentUserService)">Profile</a></li>
           </ul>
           <form class="navbar-form navbar-left">
             <div class="form-group">
