--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a ui-sref="login">Login</a></li>
             <li><a ui-sref="register">Register</a></li>
-            <li><a ng-click="main.logout()">Logout</a></li>
+            <li ng-show="main.user"><a ng-click="main.logout()">Logout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
