--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" ui-sref="home">Brand</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Home</a></li>
+            <li><a ui-sref="home">Home</a></li>
             <li><a ui-sref="eventsIndex">Events</a></li>
             <li><a ui-sref="usersShow({ id: main.user._id })">Profile</a></li>
           </ul>
@@ -49,5 +49,7 @@
     </nav>
   </header>
   <main ui-view></main>
+  <div ui-view="view1"></div>
+  <div ui-view="view2"></div>
 </body>
 </html>
