--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" ui-sref="home">Brand</a>
+          <a class="navbar-brand" ui-sref="home"><img class="navBrand" src="/images/clubMate(Orange).png" alt=""></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
