fixed add event button

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
             <li><a ui-sref="home">Home</a></li>
             <li><a ui-sref="eventsIndex">Events</a></li>
             <li><a ui-sref="usersShow({ id: main.user._id })">Profile</a></li>
+            <li><a ui-sref="eventsCreate">Add Event</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a ui-sref="login">Login</a></li>
