--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
                     <li>
                       <a ui-sref="usersInterested({ id: main.user._id })">Interested In</a>
                     </li>
+                    <li>
+                      <a ui-sref="usersInbox({ id: main.user._id })">Inbox</a>
+                    </li>
                     <li role="separator" class="divider"></li>
                     <li>
                       <a ng-click="main.logout()">Logout</a>
