--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,9 @@
                     <li>
                       <a ui-sref="usersInbox({ id: main.user._id })">Inbox</a>
                     </li>
+                    <li>
+                      <a ui-sref="usersOutbox({ id: main.user._id })">Outbox</a>
+                    </li>
                     <li role="separator" class="divider"></li>
                     <li>
                       <a ng-click="main.logout()">Logout</a>
