inbox and outbox loading from the same page

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,9 @@
                     <li>
                       <a ui-sref="usersOutbox({ id: main.user._id })">Outbox</a>
                     </li>
+                    <li>
+                      <a ui-sref="usersRequests({ id: main.user._id })">Requests</a>
+                    </li>
                     <li role="separator" class="divider"></li>
                     <li>
                       <a ng-click="main.logout()">Logout</a>
