--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Club Mate</title>
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/orkney" type="text/css"/>
+  <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/orkney" type="text/css"/> -->
   <base href="/" />
   <!-- endinject -->
   <!-- inject:css -->
