--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Club Mate</title>
-  <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/orkney" type="text/css"/> -->
   <base href="/" />
+  <!-- inject:js -->
   <!-- endinject -->
   <!-- inject:css -->
   <!-- endinject -->
