--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li ng-show="main.user" ng-if="main.eventActive(main.user)"><a ui-sref="eventsCreate">Add Event</a></li>
+                <li ng-show="main.user"><a ui-sref="eventsCreate">Add Event</a></li>
                 <li ng-show="main.user"><a ui-sref="eventsIndex">Browse Events</a></li>
                 <li ng-show="main.user" class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ main.user.firstName }} <span class="caret"></span></a>
