--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Club Mate</title>
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/orkney" type="text/css"/>
   <base href="/" />
-<<<<<<< HEAD
-  <!-- inject:js -->
-=======
     <!-- inject:js -->
->>>>>>> 7fe746924e591b548ef2c88bc845e7838b5ce696
   <!-- endinject -->
   <!-- inject:css -->
   <!-- endinject -->
