--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Club Mate</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/" />
   <!-- inject:js -->
   <!-- endinject -->
   <!-- inject:css -->
   <!-- endinject -->
-</head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis">
+  </head>
 <body ng-controller="MainCtrl as main">
   <header>
     <nav class="navbar navbar-default">
