--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                       <a ui-sref="usersEvents({ id: main.user._id })">My Events</a>
                     </li>
                     <li>
-                      <a ui-sref="usersRequests({ id: main.user._id })">Requests</a>
+                      <a ui-sref="usersRequests({ id: main.user._id })">Pending Requests</a>
                     </li>
                     <li role="separator" class="divider"></li>
                     <li>
