--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <!-- inject:css -->
   <!-- endinject -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis">
+  <link rel="shortcut icon" href="/images/favicon.ico" type="/images/x-icon">
   </head>
 <body ng-controller="MainCtrl as main">
   <header>
